--- a/frontend/templates/game.html
+++ b/frontend/templates/game.html
@@ -139,6 +139,9 @@
                 "view_bounds": [[0, 0], [width, height]]
             }));
         }
+        websocket.onclose = (event) => {
+            console.log(event);
+        }
         websocket.onmessage = ({ data }) => {
             const answer = JSON.parse(data);
 
@@ -151,7 +154,7 @@
                         // Note that Y and X are reversed on the server side!
                         const y = parameters["x"];
                         const x = parameters["y"];
-                        const componentId = answer;
+                        const componentId = answer["result"];
                         addComponent(type, x, y, componentId);
                         break
                 }
@@ -179,6 +182,28 @@
                         addComponent(type, x, y, componentId);
                         break
                     }
+                    case "cell_move":
+                    {
+                        const componentId = notificationInfo["data"]["id"];
+                        // Note that Y and X are reversed on the server side!
+                        const y = notificationInfo["data"]["x"];
+                        const x = notificationInfo["data"]["y"];
+
+                        const component = components[componentId];
+                        component.position({
+                            x: x,
+                            y: y
+                        });
+                        break
+                    }
+                    case "component_remove":
+                    {
+                        const componentId = notificationInfo["data"]["id"];
+
+                        const component = components[componentId];
+                        component.remove();
+                        break
+                    }
                 }
             }
         };
@@ -203,6 +228,8 @@
             }));
         }
 
+        // ID to component
+        const components = {};
         function addComponent(type, x, y, component_id) {
             const isCell = type != "car";
             if (isCell) {
@@ -222,6 +249,7 @@
                 });
                 component.type = type;
                 component.id = component_id;
+                components[component_id] = component;
 
                 if (isCell) {
                     component.on('dragstart', (e) => {
