--- a/frontend/templates/game.html
+++ b/frontend/templates/game.html
@@ -77,6 +77,7 @@
     <script>
         const currViewId = {{ id }};
         const currViewIsMap = true;
+        var carId = null;
 
         const canvas = {{ canvas | safe }};
         const rowCount = canvas.length;
@@ -138,6 +139,14 @@
                 // TODO: Check bounds
                 "view_bounds": [[0, 0], [width, height]]
             }));
+
+            // Start game loop
+            websocket.send(JSON.stringify({
+                "type": currViewIsMap ? "map" : "view",
+                "id": currViewId,
+                "function_name": "start",
+                "parameters": [{}]
+            }));
         }
         websocket.onclose = (event) => {
             console.log(event);
@@ -155,8 +164,61 @@
                         const y = parameters["x"];
                         const x = parameters["y"];
                         const componentId = answer["result"];
+
+                        if (type === "car") {
+                            if (!carId) {
+                                document.addEventListener('keydown', function (event) {
+                                    if (!carId)
+                                        return;
+
+                                    switch (event.key) {
+                                        case "ArrowLeft":
+                                            {
+                                                websocket.send(JSON.stringify({
+                                                    "type": "car",
+                                                    "id": carId,
+                                                    "function_name": "turn_counterclockwise",
+                                                    "parameters": [{}]
+                                                }));
+                                                break;
+                                            }
+                                        case "ArrowRight":
+                                            {
+                                                websocket.send(JSON.stringify({
+                                                    "type": "car",
+                                                    "id": carId,
+                                                    "function_name": "turn_clockwise",
+                                                    "parameters": [{}]
+                                                }));
+                                                break;
+                                            }
+                                        case "ArrowUp":
+                                            {
+                                                websocket.send(JSON.stringify({
+                                                    "type": "car",
+                                                    "id": carId,
+                                                    "function_name": "accelerate",
+                                                    "parameters": [{}]
+                                                }));
+                                                break;
+                                            }
+                                        case "ArrowDown":
+                                            {
+                                                websocket.send(JSON.stringify({
+                                                    "type": "car",
+                                                    "id": carId,
+                                                    "function_name": "brake",
+                                                    "parameters": [{}]
+                                                }));
+                                                break;
+                                            }
+                                    }
+                                });
+                            }
+                            carId = componentId;
+                        }
                         addComponent(type, x, y, componentId);
-                        break
+                        break;
                 }
             }
             else {
@@ -170,7 +232,7 @@
                         const x = notificationInfo["data"]["y"];
                         const componentId = notificationInfo["data"]["id"];
                         addComponent(type, x, y, componentId);
-                        break
+                        break;
                     }
                     case "map_create_component_cell":
                     {
@@ -180,7 +242,7 @@
                         const x = notificationInfo["data"]["y"];
                         const componentId = notificationInfo["data"]["id"];
                         addComponent(type, x, y, componentId);
-                        break
+                        break;
                     }
                     case "cell_move":
                     {
@@ -194,7 +256,7 @@
                             x: x,
                             y: y
                         });
-                        break
+                        break;
                     }
                     case "component_remove":
                     {
@@ -202,7 +264,30 @@
 
                         const component = components[componentId];
                         component.remove();
-                        break
+                        break;
+                    }
+                    case "tick":
+                    {
+                        const componentId = notificationInfo["data"]["id"];
+                        const position = notificationInfo["data"]["position"];
+                        const angle = notificationInfo["data"]["angle"];
+                        const speed = notificationInfo["data"]["speed"];
+
+                        const component = components[componentId];
+                        const x = position[0];
+                        const y = position[1];
+
+                        component.position({
+                            x: x,
+                            y: y
+                        });
+                        component.rotation(angle);
+                        component.to({
+                            x: x + 1,
+                            y: y + 1,
+                            duration: 1 / 24
+                        });
+                        break;
                     }
                 }
             }
